# 8-damo-ai

./: .gitignore  DEVELOPMENT_PLAN.md  MULTI_AGENT_DESIGN_DOC.md  README.md  ecosystem.ai.config.js  main.py  pyproject.toml  requirements.txt  run.test.sh  sample.json  test.md
.github/workflows/: manual_test.yml  python-ci.yml
preprocess/: .env.local  pyproject.toml  run.sh  test.sh
preprocess/tests/: test_dependencies.py  test_playwright.py
scripts/: deploy_bigbang.sh  rollback.sh
src/api/v1/: router.py
src/api/v2/: router.py
src/core/: config.py
src/recommendation/api/: routes_v1.py
src/recommendation/data/: mock_items.py
src/recommendation/entities/: dining_process.py  persona.py  restaurant.py  users.py
src/recommendation/enums/: __init__.py  user_enums.py
src/recommendation/repositories/: __init__.py  persona_repository.py  restaurant_repository.py
src/recommendation/router/: routes_v1.py
src/recommendation/schemas/: analyze_refresh_request.py  analyze_refresh_response.py  dining_data.py  dining_session.py  recommendations_request.py  recommendations_response.py  recommended_item.py  restaurant_fix_request.py  restaurant_vote_result.py  update_persona_db_request.py  user_data.py
src/recommendation/workflows/: graph.py  update_persona_db.py  workflow.py
src/router/: router.py
src/router/v1/: router.py
src/router/v2/: router.py
src/shared/: database.py
src/shared/db/: db_manager.py
src/shared/json/: allergies_keywords_ko.jsonl
tests/: conftest.py
tests/integration/: test_discussion_graph.py  test_recommendation_api_v1.py
(+69 files in other folders)
